Fix profil-gestion scrollbar style

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,7 @@
   --light-yellow-color: #FAF5E9;
 }
 
+
 *{
   margin: 0;
   padding: 0;
@@ -239,6 +240,17 @@ main{
 
 .buttons-gestion-container{
   overflow-x: scroll;
+}
+
+.buttons-gestion-container::-webkit-scrollbar {  
+  height: 7px;
+  width: 25%;
+}
+
+.buttons-gestion-container::-webkit-scrollbar-thumb {
+  border-radius: 1.5rem;
+  background-color: var(--dark-yellow-color);
+  background-clip: content-box;
 }
 
 /* GESTION - TOP ANIMALS */
